chore: more config options