@@ -1,5 +1,6 @@
 package dev.suresh;
 
+import static java.lang.System.out;
 
 import dev.suresh.adt.Records;
 import dev.suresh.jte.RenderJte;
@@ -8,9 +9,12 @@ import dev.suresh.mvn.MavenResolver;
 import dev.suresh.npe.HelpfulNPE;
 import dev.suresh.server.MockServer;
 import dev.suresh.tools.JdkToolsKt;
+import java.lang.invoke.MethodHandles;
+import java.security.Security;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
+import java.util.Properties;
 
 record Person(String name, int age) {}
 
@@ -45,9 +49,22 @@ public class Main {
         need for most escape sequences.
         \u2022
         """;
-    System.out.println(textBlock);
-    System.out.println(textBlock.translateEscapes());
-    System.out.println("Record Test: " + new Person("Hello Kotlin", 8));
+    out.println(textBlock);
+    out.println(textBlock.translateEscapes());
+    out.println("Record Test: " + new Person("Hello Kotlin", 8));
+
+    // Since these 2 properties are part of the security policy, they are not
+    // set by either the -D option or the System.setProperty() API
+    var secMgr = System.getSecurityManager();
+    out.println("Security Manager: " + secMgr);
+
+    final String dnsCacheTTL = "networkaddress.cache.ttl";
+    final String dnsCacheNegTTL = "networkaddress.cache.negative.ttl";
+    out.println(dnsCacheTTL + " -> " + Security.getProperty(dnsCacheTTL));
+    out.println(dnsCacheNegTTL + " -> " + Security.getProperty(dnsCacheNegTTL));
+    Security.setProperty(dnsCacheTTL, "30");
+    Security.setProperty(dnsCacheNegTTL, "10");
+    // showAllSecurityProperties();
 
     new MockServer().run();
     new MavenResolver().run();
@@ -56,6 +73,17 @@ public class Main {
     JettyServerKt.run(8080);
     JdkToolsKt.run();
     HelpfulNPE.run();
+  }
+
+  /** @see <a href="https://www.baeldung.com/java-variable-handles">VarHandles</a> */
+  private static void showAllSecurityProperties() throws Exception {
+    // Should add this VM args "--add-opens=java.base/java.security=ALL-UNNAMED"
+    var lookup = MethodHandles.lookup();
+    var varHandle =
+        MethodHandles.privateLookupIn(Security.class, lookup)
+            .findStaticVarHandle(Security.class, "props", Properties.class);
+    Properties sec = (Properties) varHandle.get();
+    sec.forEach((k, v) -> out.println(k + " --> " + v));
   }
 
   @Override
